--- a/package.json
+++ b/package.json
@@ -13,15 +13,28 @@
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
     "@fontsource/chakra-petch": "^4.5.9",
+    "@types/node": "^18.16.3",
     "chart.js": "^4.3.0",
+    "dotenv": "^16.0.3",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "express": "^4.18.2",
     "firebase": "^9.21.0",
     "framer-motion": "^10.12.4",
     "jsonwebtoken": "^9.0.0",
     "next": "13.3.1",
+    "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0"
+  },
+  "type": "commonjs",
+  "description": "A game to spread awareness about crypto environmental damages",
+  "main": "db.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
