--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
-  "name": "terrader",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@chakra-ui/react": "^2.6.0",
-    "@emotion/react": "^11.10.8",
-    "@emotion/styled": "^11.10.8",
-    "@fontsource/chakra-petch": "^4.5.9",
-    "chart.js": "^4.3.0",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.1",
-    "firebase": "^9.21.0",
-    "framer-motion": "^10.12.4",
-    "jsonwebtoken": "^9.0.0",
-    "next": "13.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.8.0"
-  }
+    "name": "terrader",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@chakra-ui/icons": "^2.0.19",
+        "@chakra-ui/react": "^2.6.0",
+        "@emotion/react": "^11.10.8",
+        "@emotion/styled": "^11.10.8",
+        "@fontsource/chakra-petch": "^4.5.9",
+        "bcryptjs": "^2.4.3",
+        "chart.js": "^4.3.0",
+        "eslint": "8.39.0",
+        "eslint-config-next": "13.3.1",
+        "firebase": "^9.21.0",
+        "framer-motion": "^10.12.4",
+        "jsonwebtoken": "8.5.1",
+        "next": "13.3.1",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-icons": "^4.8.0"
+    }
 }
